--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="shortcut icon" href="https://i.imgur.com/hViW80o.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </head>
 
@@ -58,69 +61,76 @@
             </p>
         </div>
     </header>
-    <section>
+    <section class="text-center">
         <div class="container">
-            <div class="card-deck text-center">
-                <div class="card mb-4 box-shadow">
-                    <div class="card-header bg-transparent">
-                        <img src="https://i.imgur.com/gBBbwgH.png" alt="web-banner" width="120px">
-                    </div>
-                    <div class="card-body d-flex flex-column">
-                        <h3 class="card-title">Web Design Bootcamp</h3>
-                        <p class="card-text font-weight-bold mb-auto">5 weeks, 7-9PM Tu/Th, starts April 17th</p>
-                        <ul class="list-unstyled my-4">
-                            <li>Build portfolio from scratch</li>
-                            <li>Responsive with Bootstrap</li>
-                            <li>Customize with Wordpress</li>
-                            <li>Mentoring support</li>
-                        </ul>
-                        <h3>4.9M VND
-                            <small class="text-muted">/ course</small>
-                        </h3>
-                    </div>
-                    <div class="card-footer">
-                        <a class="btn btn-lg btn-danger" href="checkout.html">Check out</a>
-                    </div>
-                </div>
-                <div class="card mb-4 box-shadow">
-                    <div class="card-header bg-transparent"> <img src="https://i.imgur.com/gBBbwgH.png" alt="react-banner"
-                            width="120px"></div>
-                    <div class="card-body d-flex flex-column">
-                        <h3 class="card-title">React + React Native</h3>
-                        <p class="card-text font-weight-bold mb-auto">5 weeks, 7-9PM Tu/Th, starts April 17th</p>
-                        <ul class="list-unstyled my-4">
-                            <li>Build portfolio from scratch</li>
-                            <li>Responsive with Bootstrap</li>
-                            <li>Customize with Wordpress</li>
-                            <li>Mentoring support</li>
-                        </ul>
-                        <h3>25M VND
-                            <small class="text-muted">/ course</small>
-                        </h3>
-                    </div>
-                    <div class="card-footer">
-                        <a class="btn btn-lg btn-danger" href="checkout.html">Check out</a>
+            <div class="row">
+                <div class="col-12 col-sm-8 offset-sm-2 offset-lg-0 col-lg-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-header bg-transparent">
+                            <img src="https://i.imgur.com/gBBbwgH.png" alt="web-banner" width="120px">
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <h3 class="card-title">Web Design Bootcamp</h3>
+                            <p class="card-text font-weight-bold mb-auto">5 weeks, 7-9PM Tu/Th, starts April 17th</p>
+                            <ul class="list-unstyled my-4">
+                                <li>Build portfolio from scratch</li>
+                                <li>Responsive with Bootstrap</li>
+                                <li>Customize with Wordpress</li>
+                                <li>Mentoring support</li>
+                            </ul>
+                            <h3>4.9M VND
+                                <small class="text-muted">/ course</small>
+                            </h3>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-lg btn-danger" href="checkout.html">Check out</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card mb-4 box-shadow">
-                    <div class="card-header bg-transparent"> <img src="https://i.imgur.com/lLtWDST.png" alt="data-banner"
-                            width="120px"></div>
-                    <div class="card-body d-flex flex-column">
-                        <h3 class="card-title">Data Science </h3>
-                        <p class="card-text font-weight-bold mb-auto">5 weeks, 7-9PM Tu/Th, starts April 17th</p>
-                        <ul class="list-unstyled my-4">
-                            <li>Build portfolio from scratch</li>
-                            <li>Responsive with Bootstrap</li>
-                            <li>Customize with Wordpress</li>
-                            <li>Mentoring support</li>
-                        </ul>
-                        <h3>VND
-                            <small class="text-muted">/ course</small>
-                        </h3>
+                <div class="col-12 col-sm-8 offset-sm-2 offset-lg-0 col-lg-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-header bg-transparent"> <img src="https://i.imgur.com/gBBbwgH.png"
+                                alt="react-banner" width="120px"></div>
+                        <div class="card-body d-flex flex-column">
+                            <h3 class="card-title">React + React Native</h3>
+                            <p class="card-text font-weight-bold mb-auto">5 weeks, 7-9PM Tu/Th, starts April 17th</p>
+                            <ul class="list-unstyled my-4">
+                                <li>Build portfolio from scratch</li>
+                                <li>Responsive with Bootstrap</li>
+                                <li>Customize with Wordpress</li>
+                                <li>Mentoring support</li>
+                            </ul>
+                            <h3>25M VND
+                                <small class="text-muted">/ course</small>
+                            </h3>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-lg btn-danger" href="checkout.html">Check out</a>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <a class="btn btn-lg btn-danger btn-block" href="http://www.coderschool.vn/vn/tracks/machine-learning"
-                            target="_blank">Learn more</a>
+                </div>
+                <div class="col-12 col-sm-8 offset-sm-2 offset-lg-0 col-lg-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-header bg-transparent"> <img src="https://i.imgur.com/lLtWDST.png"
+                                alt="data-banner" width="120px"></div>
+                        <div class="card-body d-flex flex-column">
+                            <h3 class="card-title">Data Science </h3>
+                            <p class="card-text font-weight-bold mb-auto">5 weeks, 7-9PM Tu/Th, starts April 17th</p>
+                            <ul class="list-unstyled my-4">
+                                <li>Build portfolio from scratch</li>
+                                <li>Responsive with Bootstrap</li>
+                                <li>Customize with Wordpress</li>
+                                <li>Mentoring support</li>
+                            </ul>
+                            <h3>VND
+                                <small class="text-muted">/ course</small>
+                            </h3>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-lg btn-danger" href="http://www.coderschool.vn/vn/tracks/machine-learning"
+                                target="_blank">Learn
+                                more</a>
+                        </div>
                     </div>
                 </div>
             </div>
