--- a/checkout.html
+++ b/checkout.html
@@ -38,7 +38,7 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class="col-lg-7">
+                <div class="col-lg-8">
                     <form action="" class="form">
                         <div class="form-row">
                             <div class="col-12">
@@ -166,21 +166,73 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <div class="d-flex flex-row justify-content-between">
                         <small>Your cart</small>
                         <small class="badge badge-secondary badge-pill text-slient">3</small>
                     </div>
                     <div class="card-desk mt-3">
                         <div class="card">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-row justify-content-between">
                                 <div class="info-course">
-                                        <h6 class="card-title">Product name</h6>
-                                        <p>Web Design Bootcamp</p>
+                                    <h6 class="card-title mb-0">Product name</h6>
+                                    <small class="card-text text-secondary">Web Design Bootcamp</small>
                                 </div>
                                 <div class="price">
-                                    4.9M
+                                    <small class="text-silent text-secondary"> 4.9M </small>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body d-flex flex-row justify-content-between">
+                                <div class="info-course">
+                                    <h6 class="card-title mb-0">Second product</h6>
+                                    <small class="card-text text-secondary">React + React Native</small>
+                                </div>
+                                <div class="price">
+                                    <small class="text-silent text-secondary"> 14.9M </small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body d-flex flex-row justify-content-between">
+                                <div class="info-course">
+                                    <h6 class="card-title mb-0">Third product</h6>
+                                    <small class="card-text text-secondary">Machine Learning</small>
+                                </div>
+                                <div class="price">
+                                    <small class="text-silent text-secondary"> 14.9M </small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card promotion">
+                            <div class="card-body d-flex flex-row justify-content-between">
+                                <div class="info-course">
+                                    <h6 class="card-title mb-0 text-success">Promotion code</h6>
+                                    <p class="card-text text-secondary text-success">EXAMPLECODE</p>
+                                </div>
+                                <div class="price">
+                                    <small class="text-silent text-secondary text-success"> -7.9M </small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card total">
+                            <div class="card-body d-flex flex-row justify-content-between">
+                                <div class="info-course">
+                                    <h6 class="card-title mb-0">Total (VND)</h6>
+                                </div>
+                                <div class="price">
+                                    <p class="text-silent text-secondary mb-0"><strong> 27.2M</strong></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card redeem">
+                            <div class="card-body">
+                                <form>
+                                    <div class="form-row">
+
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
