--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <small class="text-muted">/ course</small>
                             </h3>
                         </div>
-                        <div class="card-footer">
+                        <div class="card-footer bg-danger">
                             <a class="btn btn-lg btn-danger" href="checkout.html">Check out</a>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                                 <small class="text-muted">/ course</small>
                             </h3>
                         </div>
-                        <div class="card-footer">
+                        <div class="card-footer bg-danger">
                             <a class="btn btn-lg btn-danger" href="checkout.html">Check out</a>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                                 <small class="text-muted">/ course</small>
                             </h3>
                         </div>
-                        <div class="card-footer">
+                        <div class="card-footer bg-danger">
                             <a class="btn btn-lg btn-danger" href="http://www.coderschool.vn/vn/tracks/machine-learning"
                                 target="_blank">Learn
                                 more</a>
